# Copyright (c) 2026 Edison Lepiten / AIEONYX
[package]
name = "bastion"
version = "0.2.0"
edition = "2021"
authors = ["Edison Lepiten <aieonyx.eu@gmail.com>"]
description = "BASTION — AIEONYX sovereign node OS: policy PD, binary verifier, commissioning"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axon_crypto = { path = "vendor/axon_crypto" }

[dev-dependencies]
serde_json = "1"
